- neuer Provider: Mitglieder - VS-Cordova Resourcen hinzugefügt

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -10,3 +10,4 @@
 @import "../pages/aktuelles/aktuelles";
 @import "../pages/termine/termine";
 @import "../pages/kontakt/kontakt";
+@import "../pages/mitglieder/mitglieder";
