--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -39,3 +39,7 @@ $link-color: color($colors, secondary);
 $link-md-color: color($colors, secondary); 
 $link-ios-color: color($colors, secondary); 
 $link-wp-color: color($colors, secondary); 
+
+.button-icon-right{
+    float: right;
+}
