--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -29,7 +29,7 @@ $colors: (
   primary:    #fff,
   secondary:  #E2001A,
   danger:     #FFE000,
-  light:      #E2001A,
+  light:      #e0e0e0,
   dark:       #9B0012,
   favorite:   #69BB7B
 );
