--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -12,6 +12,63 @@
 @import "../pages/kontakt/kontakt";
 @import "../pages/mitglieder/mitglieder";
 
+@font-face {
+    font-family: 'Roboto';
+    src: url("../fonts/roboto-light.ttf");
+    src: url("../fonts/roboto-light.woff") format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Roboto';
+    src: url("../fonts/roboto-regular.ttf");
+    src: url("../fonts/roboto-regular.woff") format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Roboto';
+    src: url("../fonts/roboto-medium.ttf");
+    src: url("../fonts/roboto-medium.woff") format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Roboto';
+    src: url("../fonts/roboto-bold.ttf");
+    src: url("../fonts/roboto-bold.woff") format('woff');
+    font-weight: 800;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url("../fonts/OpenSans-Light.ttf");
+    src: url("../fonts/OpenSans-Light.woff") format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url("../fonts/OpenSans-Regular.ttf");
+    src: url("../fonts/OpenSans-Regular.woff") format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url("../fonts/OpenSans-Semibold.ttf");
+    src: url("../fonts/OpenSans-Semibold.woff") format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url("../fonts/OpenSans-Bold.ttf");
+    src: url("../fonts/OpenSans-Bold.woff") format('woff');
+    font-weight: 800;
+    font-style: normal;
+}
 
 @import "font-awesome/font-awesome.scss";
 @font-face {
