--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -34,13 +34,17 @@ $colors: (
   favorite:   #69BB7B
 );
 
-$toolbar-background: #E2001A;
+$toolbar-background: color($colors, secondary);
 $link-color: color($colors, secondary); 
 $link-md-color: color($colors, secondary); 
 $link-ios-color: color($colors, secondary); 
 $link-wp-color: color($colors, secondary); 
 
-body, .htmlarea-content-body {
+$footer-background: color($colors, dark); 
+$footer-link-color: color($colors, primary); 
+$border-color: color($colors, danger);
+
+body{
     font-family: Open Sans, Exo, Arial;
     font-size: 15px;
     line-height: 1.55;
@@ -179,4 +183,8 @@ ion-img img {
 
 .text-center{
     text-align:center;
+}
+
+.no-margin-bottom{
+    margin-bottom: 0 !important;
 }
