--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -111,6 +111,17 @@ h2 a {
   border-bottom: 1px solid color($colors, light);
 }
 
+.cutiundstier .toolbar-background{
+    background-color: rgba(255,255,255,1);
+}
+.cutiundstier.toolbar{
+    padding: 10px 7px 10px 4px;
+    border-top: 1px solid rgba(11,104,174,1);
+}
+.cutiundstier img{
+  margin: auto;
+  display: block;
+}
 ion-navbar ion-title {
   text-align:center;
 }
@@ -187,4 +198,8 @@ ion-img img {
 
 .no-margin-bottom{
     margin-bottom: 0 !important;
+}
+
+.item > ion-icon, .item-inner > ion-icon {
+    color: #E1CF5F;
 }
