--- a/app/pages/login/login.scss
+++ b/app/pages/login/login.scss
@@ -1,3 +1,36 @@
 .login {
+
+    ion-label[stacked], ion-label[floating] {
+        padding-left: 10px;
+    }
+
+    ion-item.item.item-label-floating.input-has-value.item-input {
+        margin-top: 15px;
+    }
+
+    .input-has-focus ion-label[floating], .input-has-value ion-label[floating] {
+        -webkit-transform: translate3d(0, 0, 0) scale(1);
+        transform: translate3d(0, 0, 0) scale(1);
+    }
+
+    ion-label {
+        margin-left: 10px;
+    }
+ 
+    ion-input, ion-select, ion-textarea {
+        background-color: #f2f2f2;
+        padding: 5px 10px;
+    }
+    
+    .invalid {
+        border: 1px solid #ea6153;
+    }
+
+    form .item {
+        padding-left: 0;
+    }
+    form .item .item-inner {
+        padding-right: 0;
+    }
      
 }
