- Jubiläums-Inhalte - Interner Auftrittsplan - Optische Optimierungen

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -8,6 +8,7 @@
 // App Shared Sass variables belong in app.variables.scss.
 
 @import "../pages/aktuelles/aktuelles";
+@import "../pages/auftrittsplan/auftrittsplan";
 @import "../pages/impressum/impressum";
 @import "../pages/jubilaeum/jubilaeum";
 @import "../pages/kontakt/kontakt";
