--- a/app/pages/auftrittsplan/auftrittsplan.scss
+++ b/app/pages/auftrittsplan/auftrittsplan.scss
@@ -1,8 +1,14 @@
-.termine {
+.auftrittsplan {
     .item {
         padding: 8px 4px;
     } 
     ion-icon[item-left] + .item-inner, ion-icon[item-left] + .item-input {
         margin-left: 4px;
+    }
+    ion-list .item {
+        border-bottom: 1px solid #dedede;
+    }
+    ion-list .item .item-inner {
+        border-bottom: none;
     }
 }
