--- a/app/pages/termine/termine.scss
+++ b/app/pages/termine/termine.scss
@@ -5,4 +5,10 @@
     ion-icon[item-left] + .item-inner, ion-icon[item-left] + .item-input {
         margin-left: 4px;
     }
+    ion-list .item {
+        border-bottom: 1px solid #dedede;
+    }
+    ion-list .item .item-inner {
+        border-bottom: none;
+    }
 }
